Fix sidebar on mobile screens (fix #17) (#18)
Don't show the sidebar by default on smaller screens

--- a/templates/alchemy/style.css
+++ b/templates/alchemy/style.css
@@ -311,3 +311,18 @@ hr {
   right: 6%;
   margin-top: 14px;
 }
+
+@media screen and (max-width: 768px) {
+  .content {
+    margin-left: 0;
+  }
+  .tools {
+    margin-left: 270px;
+  }
+  .full-width .content .tools {
+    margin-left: 0;
+  }
+  .full-width .sidebar {
+    transition: none;
+  }
+}
